2001-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Improve Navigation in "Examine Mode". Navigation speed is
          taken care.

2001-10-27  Braden McDaniel  <braden@endoframe.com>

        * Give up on trying to predict where the SpiderMonkey headers
          live. Users should supply this in CPPFLAGS when running
          configure.

        * In VrmlNodePtr constructor: assert that the value returned
          in the insertion result matches the argument VrmlNode *.

        * Clean up VrmlNodePtr::dispose().

        * Fixed crash on exit in VrmlNodePtr::dispose().

        * Using erase() instead of remove() for the node lists in
          VrmlScene is more efficient and avoids a crash on exit.

2001-10-17  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixes for bug #213579. Problem on invariant background under
          all viewpoint transformations.

2001-10-17  Braden McDaniel  <braden@endoframe.com>

        * Use variables resolved by configure to tell Java where .class
          files and libraries are installed.

        * Fixed memory leak involving inappropriate use of freeze() with
          ostrstream in `ScriptJDK.cpp'.

        * Java .class files are nolonger installed by `make install'.

        * JNI headers are nolonger generated. (They aren't strictly
          required, and automake 1.5 has problems with generated sources
          that should be neither installed nor included in the
          distribution.)

        * Added checks for `javac' and `jar' to configure.

        * Changed `--with-jni' option to `--with-jdk'. 

        * Don't attempt to compile Java classes for `--without-jdk'.

2001-10-15  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Add accumulateTransform after adding all nodes to Scene in
          "VrmlScene" to cache a pointer to ParentTransform. It is needed
          to calculate the inverse of transformation stack above
          Viewpoint node before rendering traversal starts.
