@@ -1,3 +1,7 @@
+2001-11-01  Braden McDaniel  <braden@endoframe.com>
+
+        * Some minor improvements to VrmlNodePtr.
+
 2001-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>
 
         * Improve Navigation in "Examine Mode". Navigation speed is
